--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,26 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<!-- PWA Meta Tags -->
+		<meta name="description" content="Celestia Arcana - Mystical Tarot Deck and Cosmic Alignment Calculator" />
+		<meta name="theme-color" content="#7B61FF" />
+		<meta name="msapplication-TileColor" content="#7B61FF" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+		<meta name="apple-mobile-web-app-title" content="Celestia Arcana" />
+
+		<!-- PWA Manifest -->
+		<link rel="manifest" href="/manifest.json" />
+
+		<!-- PWA Icons -->
+		<link rel="icon" type="image/png" sizes="192x192" href="/icons/icon-192x192.png" />
+		<link rel="icon" type="image/png" sizes="512x512" href="/icons/icon-512x512.png" />
+		<link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
+
+		<!-- PWA Styles -->
+		<link rel="stylesheet" href="/pwa-styles.css" />
+
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -13,5 +33,8 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+
+		<!-- PWA Script -->
+		<script src="/pwa.js"></script>
 	</body>
 </html>
