Configure for Netlify deployment

--- a/src/app.html
+++ b/src/app.html
@@ -13,15 +13,15 @@
 		<meta name="apple-mobile-web-app-title" content="Celestia Arcana" />
 
 		<!-- PWA Manifest -->
-		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
+		<link rel="manifest" href="/manifest.json" />
 
 		<!-- PWA Icons -->
-		<link rel="icon" type="image/png" sizes="192x192" href="%sveltekit.assets%/icons/icon-192x192.png" />
-		<link rel="icon" type="image/png" sizes="512x512" href="%sveltekit.assets%/icons/icon-512x512.png" />
-		<link rel="apple-touch-icon" href="%sveltekit.assets%/icons/icon-192x192.png" />
+		<link rel="icon" type="image/png" sizes="192x192" href="/icons/icon-192x192.png" />
+		<link rel="icon" type="image/png" sizes="512x512" href="/icons/icon-512x512.png" />
+		<link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
 
 		<!-- PWA Styles -->
-		<link rel="stylesheet" href="%sveltekit.assets%/pwa-styles.css" />
+		<link rel="stylesheet" href="/pwa-styles.css" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -35,6 +35,6 @@
 		<div style="display: contents">%sveltekit.body%</div>
 
 		<!-- PWA Script -->
-		<script src="%sveltekit.assets%/pwa.js"></script>
+		<script src="/pwa.js"></script>
 	</body>
 </html>
