Fix Netlify issues: static cards list, missing icon, deprecated meta tag

--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,7 @@
 		<meta name="description" content="Celestia Arcana - Mystical Tarot Deck and Cosmic Alignment Calculator" />
 		<meta name="theme-color" content="#7B61FF" />
 		<meta name="msapplication-TileColor" content="#7B61FF" />
+		<meta name="mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 		<meta name="apple-mobile-web-app-title" content="Celestia Arcana" />
