--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,11 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 		<meta name="apple-mobile-web-app-title" content="Celestia Arcana" />
 
+		<!-- Favicons -->
+		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+
 		<!-- PWA Manifest -->
 		<link rel="manifest" href="/manifest.json" />
 
